--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -2,30 +2,32 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="4dp"
+    android:layout_margin="4dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="4dp">
 
-        <TextView
-            android:id="@+id/textViewNumber"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:text="1"
-            android:textSize="20sp"
-            android:textAlignment="center"
-            android:background="@android:color/holo_blue_light"/>
+            <TextView
+                android:id="@+id/textViewNumber"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:text="1"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:layout_margin="13dp"
+                android:background="@android:color/holo_blue_light"/>
 
-        <TextView
-            android:id="@+id/textViewStartFinish"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Salida - Destino"
-            android:layout_marginLeft="40dp"
-            android:textSize="20sp"/>
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/textViewStartFinish"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Salida - Destino"
+                android:layout_marginTop="13dp"
+                android:textSize="20sp"/>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
