--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -8,6 +8,7 @@
     android:layout_margin="4dp">
 
     <LinearLayout
+        android:id="@+id/carViewLines"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="4dp">
