--- a/app/src/main/res/layout/fragment_destino_salida.xml
+++ b/app/src/main/res/layout/fragment_destino_salida.xml
@@ -4,14 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--<androidx.recyclerview.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFinishStar"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </androidx.recyclerview.widget.RecyclerView>-->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Salida-Destino"
-        android:textSize="30sp"/>
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
