--- a/app/src/main/res/layout/stops_item.xml
+++ b/app/src/main/res/layout/stops_item.xml
@@ -1,28 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:shape="oval"
-            android:background="@color/colorPrimary"
-            android:layout_margin="4dp"/>
+            android:layout_width="5dp"
+            android:layout_height="10dp"
+            android:layout_marginLeft="20dp"
+            android:background="@color/colorPrimary"/>
 
-        <TextView
-            android:id="@+id/stopName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Plaza España"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"/>
+            android:layout_height="match_parent"
+            android:layout_marginLeft="4dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="4dp"
+                android:background="@color/colorPrimary"
+                android:shape="oval" />
+
+            <TextView
+                android:id="@+id/stopName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Plaza España"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="5dp"
+            android:layout_height="10dp"
+            android:layout_marginLeft="20dp"
+            android:background="@color/colorPrimary"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
