--- a/app/src/main/res/layout/stops_item.xml
+++ b/app/src/main/res/layout/stops_item.xml
@@ -20,12 +20,11 @@
             android:layout_marginLeft="4dp"
             android:orientation="horizontal">
 
-            <TextView
+            <ImageView
                 android:layout_width="30dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="4dp"
-                android:background="@color/colorPrimary"
-                android:shape="oval" />
+                android:background="@color/colorPrimary"/>
 
             <TextView
                 android:id="@+id/stopName"
