Añadida pantalla visualizacion datos tras login

--- a/app/src/main/res/layout/fragment_loggin.xml
+++ b/app/src/main/res/layout/fragment_loggin.xml
@@ -39,7 +39,8 @@
             android:id="@+id/edit_text_password"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:inputType="textPassword"/>
     </LinearLayout>
 
     <Button
