--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="30dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context=".activities.MainActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,9 +32,10 @@
 
                 <Spinner
                     android:id="@+id/spinner_origin_city"
-                    android:layout_width="150dp"
+                    android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20sp" />
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginBottom="20dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -45,9 +47,10 @@
 
                 <Spinner
                     android:id="@+id/spinner_destiny_city"
-                    android:layout_width="150dp"
+                    android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20sp" />
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginBottom="20dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -65,9 +68,10 @@
 
                 <Spinner
                     android:id="@+id/spinner_origin_centre"
-                    android:layout_width="150dp"
+                    android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20sp" />
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginBottom="20dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -79,38 +83,34 @@
 
                 <Spinner
                     android:id="@+id/spinner_destiny_centre"
-                    android:layout_width="150dp"
+                    android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20sp" />
+                    android:layout_marginLeft="20sp"
+                    android:layout_marginBottom="20dp"/>
             </LinearLayout>
         </LinearLayout>
 
         <Button
             android:id="@+id/btn_search_trip"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginLeft="120dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button"
             android:text="@string/btn_search_trip"
             android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:layout_marginBottom="20dp"/>
+
+        <Button
+            android:id="@+id/btn_pay_trip"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_button"
+            android:text="@string/btn_pay_trip"
+            android:textColor="@android:color/white"
             android:textSize="20sp" />
-        <!--<de.codecrafters.tableview.TableView
-            android:id="@+id/table_view_horarios"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>-->
     </LinearLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/bottom_sheet_stops"
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        app:behavior_peekHeight="55dp"
-        app:layout_behavior="@string/bottom_sheet_behavior">
-
-        <TextView
-            android:id="@+id/text_view_lines"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
