Añadido datePicker a pantalla de registro

--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -25,7 +25,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20sp"
+                    android:layout_marginTop="20dp"
                     android:text="@string/origin_city"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
@@ -34,13 +34,12 @@
                     android:id="@+id/spinner_origin_city"
                     android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20sp"
                     android:layout_marginBottom="20dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20sp"
+                    android:layout_marginTop="20dp"
                     android:text="@string/destiny_city"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
@@ -49,7 +48,6 @@
                     android:id="@+id/spinner_destiny_city"
                     android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20sp"
                     android:layout_marginBottom="20dp"/>
             </LinearLayout>
 
@@ -61,7 +59,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20sp"
+                    android:layout_marginTop="20dp"
                     android:text="@string/origin_centre"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
@@ -70,13 +68,12 @@
                     android:id="@+id/spinner_origin_centre"
                     android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20sp"
                     android:layout_marginBottom="20dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20sp"
+                    android:layout_marginTop="20dp"
                     android:text="@string/destiny_centre"
                     android:textColor="@android:color/black"
                     android:textSize="20sp" />
@@ -85,7 +82,6 @@
                     android:id="@+id/spinner_destiny_centre"
                     android:layout_width="200dp"
                     android:layout_height="50dp"
-                    android:layout_marginLeft="20sp"
                     android:layout_marginBottom="20dp"/>
             </LinearLayout>
         </LinearLayout>
@@ -94,7 +90,7 @@
             android:id="@+id/btn_search_trip"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="120dp"
+            android:layout_marginLeft="100dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button"
             android:text="@string/btn_search_trip"
@@ -106,7 +102,7 @@
             android:id="@+id/btn_pay_trip"
             android:layout_width="200dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="120dp"
+            android:layout_marginLeft="100dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button"
             android:text="@string/btn_pay_trip"
