--- a/app/src/main/res/layout/fragment_loggin.xml
+++ b/app/src/main/res/layout/fragment_loggin.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="30dp"
+    android:paddingTop="30dp"
+    android:paddingRight="30dp">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,7 +32,8 @@
             android:id="@+id/edit_text_user"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:maxLines="1"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="35sp"
@@ -40,7 +47,8 @@
             android:layout_width="300dp"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword"
+            android:maxLines="1"/>
     </LinearLayout>
 
     <Button
@@ -64,3 +72,4 @@
         android:textColor="@android:color/holo_blue_light"
         android:textSize="20sp"/>
 </RelativeLayout>
+</androidx.core.widget.NestedScrollView>
