--- a/app/src/main/res/layout/activity_credit_card.xml
+++ b/app/src/main/res/layout/activity_credit_card.xml
@@ -4,20 +4,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_credit_cards"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"/>
     <Button
         android:id="@+id/btn_new_credit_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/new_credit_card"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/rounded_dark_button"
         android:textColor="@android:color/white"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginLeft="100dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_credit_cards"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"/>
 </LinearLayout>
