--- a/app/src/main/res/layout/credit_card_item.xml
+++ b/app/src/main/res/layout/credit_card_item.xml
@@ -1,75 +1,77 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical">-->
+
+<!--<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">-->
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="40dp"
+    android:layout_marginTop="40dp"
+    android:layout_marginRight="40dp"
+    app:cardBackgroundColor="@color/colorPrimaryDark"
+    app:cardCornerRadius="8dp">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:src="@drawable/chip" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="4dp"
         android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+        <TextView
+            android:id="@+id/text_view_number_credit_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="40dp"
-            app:cardCornerRadius="8dp"
-            app:cardBackgroundColor="@color/colorPrimaryDark">
+            android:layout_marginTop="70dp"
+            android:text="Nº Tarjeta"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/text_view_cad_credit_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Caduca final"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@android:color/white"
+            android:textSize="15sp" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/text_view_user_credit_card"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:maxLines="1"
+                android:text="Propietario"
+                android:textColor="@android:color/white"
+                android:textSize="15sp" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/chip"
-                android:layout_margin="10dp"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="4dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/text_view_number_credit_card"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="70dp"
-                    android:text="Nº Tarjeta"
-                    android:textSize="20sp"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/white"/>
-
-                <TextView
-                    android:id="@+id/text_view_cad_credit_card"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="Caduca final"
-                    android:textAllCaps="true"
-                    android:textSize="15sp"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/white"/>
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/text_view_user_credit_card"
-                        android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Propietario"
-                        android:textSize="15sp"
-                        android:maxLines="1"
-                        android:textColor="@android:color/white"/>
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/mastercard"
-                        android:layout_alignParentRight="true"/>
-                </RelativeLayout>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                android:layout_alignParentRight="true"
+                android:background="@drawable/mastercard" />
+        </RelativeLayout>
     </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.cardview.widget.CardView><!--</LinearLayout></androidx.core.widget.NestedScrollView>-->
