--- a/app/src/main/res/menu/add_menu.xml
+++ b/app/src/main/res/menu/add_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/item_add_card"
-        android:title="Add"
-        android:icon="@drawable/ic_add"
+        android:title="Ver tarjetasa"
+        android:icon="@drawable/ic_credit_card"
         app:showAsAction="always"/>
 </menu>
