--- a/app/src/main/res/layout/dialog_card.xml
+++ b/app/src/main/res/layout/dialog_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -7,8 +7,10 @@
     tools:context=".dialogs.CardDialog">
 
     <LinearLayout
+        android:id="@+id/linear"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="60dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -45,5 +47,7 @@
         android:text="@string/reload"
         android:textColor="@color/wallet_holo_blue_light"
         android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@id/linear"
         android:layout_marginBottom="20dp"/>
-</LinearLayout>
+</RelativeLayout>
