--- a/app/src/main/res/layout/fragment_map_stops.xml
+++ b/app/src/main/res/layout/fragment_map_stops.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <fragment
+    <!--<fragment
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" />-->
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/bottom_sheet_stops"
