--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -28,8 +28,8 @@
         <item android:id="@+id/nav_log"
             android:title="@string/me"
             android:icon="@drawable/ic_logging"/>
-        <item android:id="@+id/nav_settings"
+        <!--<item android:id="@+id/nav_settings"
             android:title="@string/settings"
-            android:icon="@drawable/ic_settings"/>
+            android:icon="@drawable/ic_settings"/>-->
     </group>
 </menu>
