--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
             android:id="@+id/edit_text_register_user"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:hint="@string/user"
+            android:hint="@string/usuario"
             android:textSize="20sp"
             android:layout_marginBottom="30dp"
             android:inputType="textCapSentences"/>
