--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -9,17 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/image_user"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/ic_person_loggin"
+            android:layout_centerHorizontal="true"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="150dp">
 
             <TextView
                 android:id="@+id/text_view_user_user"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/user"
-                android:textSize="30sp" />
+                android:text="@string/usuario"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/text_view_user"
@@ -34,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/email"
-                android:textSize="30sp" />
+                android:textSize="25dp" />
 
             <TextView
                 android:id="@+id/text_view_email"
@@ -49,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/born_date"
-                android:textSize="30sp" />
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/text_view_born_date"
@@ -64,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/phone"
-                android:textSize="30sp" />
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/text_view_phone"
@@ -78,6 +86,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">-->
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/change_image"
+                android:textSize="20sp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/change_image_camera"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_camera"
+                    android:layout_marginRight="30dp"/>
+                <ImageView
+                    android:id="@+id/change_image_gallery"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_image"/>
+            </LinearLayout>
+
             <Button
                 android:id="@+id/btn_change_password"
                 android:layout_width="200dp"
@@ -85,8 +115,18 @@
                 android:background="@drawable/rounded_button"
                 android:text="@string/change_password"
                 android:textColor="@android:color/white"
-                android:layout_marginBottom="50dp"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20sp"/>
+
+            <!--<Button
+                android:id="@+id/btn_change_image"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_button"
+                android:text="@string/change_image"
+                android:textColor="@android:color/white"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="20sp"/>-->
 
             <Button
                 android:id="@+id/btn_exit"
@@ -96,7 +136,7 @@
                 android:text="@string/exit"
                 android:textColor="@android:color/holo_blue_light"
                 android:layout_marginBottom="30dp"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="20sp"/>
         </LinearLayout>
 
         <TextView
